Fixed logout/login bug and made some changes to user login functions
