# backend/app/controllers/users_controller.py
@@ -1,4 +1,5 @@
 import connexion
+import jwt
 import six
 
 from app.models.artist import Artist  # noqa: E501
@@ -6,6 +7,17 @@ from app.models.playlist import Playlist  # noqa: E501
 from app.models.song import Song  # noqa: E501
 from app import util
 
+from app.controllers.authorization_controller import SECRET_KEY, token_required
+
+from werkzeug.security import check_password_hash, generate_password_hash
+import datetime
+from flask import request, jsonify, session
+
+
+# TEST : In-memory user store for demonstration --- Use a db in the future
+user = {
+    "testuser": generate_password_hash("testpassword") 
+}
 
 def add_liked_song(body, user_id):  # noqa: E501
     """User likes a song
@@ -167,7 +179,30 @@ def login_user(username=None, password=None):  # noqa: E501
 
     :rtype: str
     """
-    return 'do some magic!'
+
+    print(f"D> Login attempt - Username: {username}, Password: {password}")
+
+    # Check credentials against in-memory user store
+    stored_password_hash = user.get(username) # FIX This checks against a test user defined here - In the future use a db for storing user data
+    print(f"D> Stored password hash for {username}: {stored_password_hash}")
+    
+    if stored_password_hash and check_password_hash(stored_password_hash, password):
+        print("D> Credentials are valid")
+        
+        # Generate a JWT token
+        token = jwt.encode({
+            'username': username,
+            'exp': datetime.datetime.utcnow() + datetime.timedelta(hours=1)
+        }, SECRET_KEY, algorithm="HS256")
+        # Store user ID in session
+        session['user.id'] = username
+        print(f"D> Session user ID set to: {session.get('user.id')}")
+        print(f"D> Generated token: {token}")
+        # Return the token as a JSON response
+        return jsonify({'token': token}), 200
+    else:
+        print("D> Invalid credentials")
+        return jsonify({'message': 'Invalid credentials'}), 401
 
 
 def logout_user():  # noqa: E501
